# pico-slave

./: CMakeLists.txt  README.md
src/: main.c  slave.c  slave.h
